Add support for MacOS

--- a/flutter_local_notifications/pubspec.yaml
+++ b/flutter_local_notifications/pubspec.yaml
@@ -27,6 +27,8 @@ flutter:
         pluginClass: FlutterLocalNotificationsPlugin
       ios:
         pluginClass: FlutterLocalNotificationsPlugin
+      macos:
+        pluginClass: FlutterLocalNotificationsPlugin
 
 
 environment:
